package common.dataClasses;

public enum Role {
    VIEWER,
    MODIFIER
}
